# JupyterBonjourExtension

./: LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
jupyter-config/jupyter_server_config.d/: jupyter_bonjour.json
src/jupyter_bonjour/: __init__.py  advertiser.py  app.py
tests/: conftest.py  test_advertiser.py  test_app.py  test_init.py
tests/integration/: conftest.py  test_extension_lifecycle.py
