[project]
name = "jupyter-bonjour"
version = "0.1.0"
description = "mDNS/Bonjour service discovery for Jupyter Server"
requires-python = ">=3.10"
license = "BSD-3-Clause"
dependencies = [
    "jupyter-server>=2.0.0",
    "zeroconf>=0.80.0",
]

[project.entry-points."jupyter_server_extension_points"]
jupyter_bonjour = "jupyter_bonjour"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_bonjour"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/jupyter_server_config.d/jupyter_bonjour.json" = "etc/jupyter/jupyter_server_config.d/jupyter_bonjour.json"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-jupyter[server]>=0.10",
    "ruff>=0.9",
]
