[project]
name = "jupyter-bonjour"
version = "0.1.0"
description = "mDNS/Bonjour service discovery for Jupyter Server"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Robert J Spencer", email = "robert.spencer@stirlinglabs.com" },
]
maintainers = [
    { name = "Stirling Labs", email = "hello@stirlinglabs.com" },
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jupyter-server>=2.17.0",
    "zeroconf>=0.148.0",
]

[project.urls]
Homepage = "https://github.com/StirlingLabs/JupyterBonjourExtension"
Source = "https://github.com/StirlingLabs/JupyterBonjourExtension"
Issues = "https://github.com/StirlingLabs/JupyterBonjourExtension/issues"
Organization = "https://stirlinglabs.com"

[project.entry-points."jupyter_server_extension_points"]
jupyter_bonjour = "jupyter_bonjour"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_bonjour"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/jupyter_server_config.d/jupyter_bonjour.json" = "etc/jupyter/jupyter_server_config.d/jupyter_bonjour.json"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-jupyter[server]>=0.11.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
